Fix CSS - header visibility on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,9 @@ body {
 h1 {
     font-family: 'Playfair Display', serif;
     font-size: 3em;
-    flex-basis: 10vh;
+    flex-basis: 1.5em;
     text-align: center;
-    line-height: 10vh;
+    line-height: 1.5em;
     background-color: #000;
     color: white;
     letter-spacing: 10px;
@@ -48,6 +48,9 @@ section a img:hover {
         flex-basis: 50%;
         padding: 50px;
     }
+    h1 {
+        font-size: 3em;
+    }
 }
 
 @media (max-width: 1024px) {
@@ -55,6 +58,9 @@ section a img:hover {
         flex-basis: 50%;
         padding: 30px;
     }
+    h1 {
+        font-size: 3em;
+    }
 }
 
 @media (max-width: 640px) {
@@ -62,11 +68,17 @@ section a img:hover {
         flex-basis: 50%;
         padding: 15px;
     }
+    h1 {
+        font-size: 2.5em;
+    }
 }
 
-@media (max-width: 640px) {
+@media (max-width: 400px) {
     section>a {
         flex-basis: 100%;
         padding: 15px;
+    }
+    h1 {
+        font-size: 2.5em;
     }
 }
